--- a/manifest.json
+++ b/manifest.json
@@ -1,11 +1,11 @@
 {
-  "name": "Dollar Badge!",
-  "description": "Dollar Badge...",
-  "version": "0.1",
+  "name": "Döviz Rozeti",
+  "description": "Döviz kurlarını hızlıca görebileceğiniz bir rozet ekler... Dolar, Euro, İngiliz Sterlini vb.",
+  "version": "0.2",
   "manifest_version": 2,
-  "homepage_url": "https://github.com/serhankilicarslan/chrome-dolar-extension",
+  "homepage_url": "https://github.com/serhankilicarslan/chrome-currency-extension",
   "background": {
-    "scripts": ["assets/js/price.js","assets/js/background.js"]
+    "scripts": ["assets/js/price.js", "assets/js/background.js"]
   },
   "browser_action": {
     "default_icon":"./assets/icons/dollar-128.png",
@@ -17,5 +17,6 @@
     "background",
     "storage",
     "https://www.doviz.com/"
-  ]
+  ],
+  "content_security_policy": "script-src 'self'; object-src 'self'; connect-src * data: blob: filesystem:;"
 }
